refactor: update classes generation