@@ -1,3 +1,2 @@
---enable-preview
 --enable-native-access=ALL-UNNAMED
 --sun-misc-unsafe-memory-access=allow
